<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/reminders"
        android:title="Reminders"
        app:showAsAction="ifRoom"
        android:tooltipText="Reminders"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:iconTint="@color/white"
        />
</menu>