<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewModel.ListOfReminders">

        <ListView
            android:background="#E7EEF5"
            android:padding="10dp"
            android:clickable="true"
            android:id="@+id/reminders_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</RelativeLayout>